@@ -1,4 +1,9 @@
-ADD_DEFINITIONS(-O3)
+IF(UNIX OR CYGWIN)
+ ADD_DEFINITIONS(-O3)
+ELSEIF(WIN32)
+  ADD_DEFINITIONS(/Os)
+ENDIF(UNIX OR CYGWIN)
+#
 INCLUDE_REGULAR_EXPRESSION("^.*$")
 # Defines the source code for the library
 SET(JP3DVM_SRCS
